# bevy_xpbd

./: .gitignore  Cargo.toml
.zed/: debug.json
examples/: ball_stacking.rs  marble_pour.rs  particle_collisions.rs
src/: component.rs  entity.rs  lib.rs  resources.rs
